[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hydra-smac"
version = "0.0.6"
description = "Hydra + SMAC"
readme = "README.md"
authors = [{ name = "Corné Spek" }]
license = { file = "LICENSE" }
classifiers = [
    "Operating System :: Unix",
    "Programming Language :: Python :: 3.10",
]
keywords = ["Hydra", "SMAC"]
requires-python = ">=3.10"
dependencies = [
    "SMAC == 2.0.0"
]

[project.urls]
"Homepage" = "https://github.com/kw-corne/hydra-smac"
"Bug Tracker" = "https://github.com/kw-corne/hydra-smac/issues"

[project.optional-dependencies]
dev = [
    "black", 
    "isort", 
    "tox", 
    "pytest",
    "pre-commit",
    "flake8",
    "mypy",
    "bumpver",
    "coverage",
]

[tool.bumpver]
current_version = "0.0.6"
version_pattern = "MAJOR.MINOR.PATCH"
commit_message = "bump version {old_version} -> {new_version}"
commit = true
tag = true
push = true

[tool.bumpver.file_patterns]
"pyproject.toml" = [
    'version = "{version}"',
]
"README.md" = [
    "{version}",
]

