[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hydra-smac"
version = "0.0.7"
description = "Hydra + SMAC"
readme = "README.md"
authors = [{ name = "Corné Spek" }]
license = { file = "LICENSE" }
classifiers = [
    "Operating System :: Unix",
    "Programming Language :: Python :: 3.10",
]
keywords = ["Hydra", "SMAC"]
requires-python = ">=3.10"
dependencies = [
    "SMAC == 2.0.0"
]

[project.urls]
"Homepage" = "https://github.com/kw-corne/hydra-smac"
"Bug Tracker" = "https://github.com/kw-corne/hydra-smac/issues"

[project.optional-dependencies]
dev = [
    "black", 
    "isort", 
    "tox", 
    "pytest",
    "pre-commit",
    "flake8",
    "mypy",
    "bumpver",
    "coverage",
]

[tool.black]
line_length = 80
target-version = ['py310']

[tool.isort]
line_length = 80
profile = "black"

[tool.mypy]
check_untyped_defs = true
disallow_any_generics = true
ignore_missing_imports = true
no_implicit_optional = true
show_error_codes = true
strict_equality = true
warn_redundant_casts = true
warn_return_any = true
warn_unreachable = true
warn_unused_configs = true
no_implicit_reexport = true

[tool.bumpver]
current_version = "0.0.7"
version_pattern = "MAJOR.MINOR.PATCH"
commit_message = "bump version {old_version} -> {new_version}"
commit = true
tag = true
push = true

[tool.bumpver.file_patterns]
"pyproject.toml" = [
    'version = "{version}"',
]
"README.md" = [
    "{version}",
]
